--- a/src/app/modules/ventas/crear-venta/crear-venta.html
+++ b/src/app/modules/ventas/crear-venta/crear-venta.html
@@ -91,7 +91,7 @@
                             <div class="item-total">
                                 <div class="total-precio">${{ $any(it).total.toFixed(2) }}</div>
                                 <button class="btn-remove" type="button" (click)="quitar(it)" title="Eliminar">
-                  🗑️
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-trash-icon lucide-trash"><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"/><path d="M3 6h18"/><path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
                 </button>
                             </div>
                         </div>
